config/samples/webtop_v1alpha1_gateway.yaml
apiVersion: webtop.jacero.se/v1alpha1
kind: Gateway
metadata:
  labels:
    app.kubernetes.io/name: gateway
    app.kubernetes.io/instance: gateway-sample
    app.kubernetes.io/part-of: webtop-k8s-operator
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/created-by: webtop-k8s-operator
  name: gateway-sample
spec:
  # TODO(user): Add fields here
